--- a/Register.html
+++ b/Register.html
@@ -9,22 +9,22 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="form-box login">
-            <h2>Login</h2>
+        <div class="form-box register">
+            <h2>Registration</h2>
             <form>
                 <div class="input-box">
-                    <input type="username">
+                    <input type="text">
                     <label>username</label>
                 </div>
                 <div class="input-box">
                     <input type="password">
                     <label>password</label>
                 </div>
-                <button type="submit" class="btn">login</button>'
+                <button type="submit" class="btn">Register</button>
                 <button type="button" class="home btn">Home</button>
                 <div class="login-register">
-                    <p>Don't have an account? 
-                        <a href="#" class="register-link">Register</a>
+                    <p>Already have an account? 
+                        <a href="#" class="login-link">Login</a>
                     </p>
                 </div>
             </form>
