--- a/Register.html
+++ b/Register.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,15 +9,13 @@
 <body>
     <div class="wrapper">
         <div class="form-box register">
-            <h2>Registration</h2>
+            <h1>Registration</h1>
             <form id="registerForm">
                 <div class="input-box">
-                    <label for="username">Brugernavn:</label>
-                    <input type="text" id="username" name="username" required>
+                    <input type="text" placeholder="Brugernavn" id="username" name="username" required>
                 </div>
                 <div class="input-box">
-                    <label for="password">Kodeord:</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" placeholder="Kodeord" id="password" name="password" required>
                 </div>
                 <button type="submit" class="btn">Registrer</button>
                 <button type="button" class="home btn">Home</button>
@@ -48,6 +45,7 @@
                 window.location.href = "http://localhost:3000/Index.html";
             }
             else{
+                console.log(username,password)
                 alert('Brugeren eksister allerede')
             }
         });
